<resources>
    <string name="app_name">Dr.OnCall</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="patient_name">রোগীর নামঃ</string>
    <string name="patient_name1">অন্য রোগী</string>

    <string name="patient_title">চেম্বার নির্বাচন করুন</string>
    <string name="doctor_date">ডাক্তারের তারিখ</string>
    <string name="doctor_time">ডাক্তারের সময়সূচি</string>
    <string name="patent_problem">আপনার সমস্যা</string>

    <string-array name="doctor_chamber">
        <item>চেম্বার নির্বাচন করুন</item>
        <item>Online Video Consultation Chamber</item>
    </string-array>

    <string-array name="patient_type">
        <item>রোগীর টাইপ সিলেক্ট করুন</item>
        <item>নতুন</item>
        <item>পুরাতন</item>
        <item>রিপোর্ট দেখাবো</item>
    </string-array>

    <string name="appointment_btn">অ্যাপয়েন্টমেন্ট সাবমিট করুণ</string>
    <string name="btn_confirm">কনফার্ম করুন</string>

    <string name="vat">+(০%)ভ্যাট</string>


    <string name="diagnostic_item">টি সিলেক্ট করা হয়েছে</string>
    <string name="upload_prescription">প্রেসক্রিপশন আপলোড করুন</string>
    <string name="question_for_doctor">ডাক্তারকে \n জিজ্ঞাসা করুন</string>
    <string name="question_for_user">প্রশ্ন জিজ্ঞাসা করুন</string>


    <string-array name="question_s">
        <item>বিভাগ নির্বাচন করুন</item>
        <item>covid</item>
        <item>Heart disease</item>
        <item>Piles</item>
        <item>Dentist</item>
        <item>Dermatologist</item>
        <item>Diabetes and hormones</item>
        <item>Nose, ear and throat specialist</item>
        <item>Ophthalmologist</item>
    </string-array>


    <string name="profile_btn">এডিট করুন</string>

    <string name="profile_package_title">আমার প্যাকেজ</string>
    <string name="profile_package_details">প্রিমিয়াম বৈশিষ্ট্য এবং স্বাস্থ্য পরিকল্পনা</string>

    <string name="profile_home">হোম</string>
    <string name="profile_appointment">অ্যাপয়েন্টমেন্ট</string>
    <string name="profile_prescription">প্রেসক্রিপশন</string>
    <string name="profile_shop">সেবা শপ</string>
    <string name="profile_order">অর্ডারসমূহ</string>
    <string name="profile_diagnostic">ডায়াগনস্টিক</string>
    <string name="profile_hospital">হাসপাতাল</string>
    <string name="profile_pharmacy">ফার্মেসী</string>

    <string name="profile_name">নাম</string>
    <string name="profile_phone">ফোন নাম্বার</string>
    <string name="profile_blood">রক্তের গ্রুপ বেছে নিন</string>
    <string name="profile_nid">জাতীয় পরিচয়পত্র</string>
    <string name="profile_birth">জন্ম তারিখ</string>
    <string name="profile_gender">জেন্ডার</string>
    <string name="profile_address">ঠিকানা</string>

    <string-array name="profile_bloodSpinner">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>


    <string-array name="profile_genderSpinner">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>

    </string-array>


    <string-array name="division">
        <item>বিভাগ নির্বাচন করুন</item>
        <item>Dhaka</item>
        <item>Chattogram</item>
        <item>Rajshahi</item>
        <item>Khulna</item>
        <item>Barisal</item>
        <item>Sylhet</item>
        <item>Rangpur</item>
        <item>Mymensingh</item>
    </string-array>


    <!--    dhaka division start-->
    <string-array name="sub_for_Dhaka">
        <item>জেলা নির্বাচন করুন</item>
        <item>Dhaka</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Tangail</item>
    </string-array>

    <string-array name="sub_for_dhaka">
        <item>থানা নির্বাচন করুন</item>
        <item>Savar</item>
        <item>Dhamrai</item>
        <item>Keraniganj</item>
        <item>Nawabganj</item>
        <item>Dohar</item>
        <item>Adabor</item>
        <item>Airport</item>
        <item>Badda</item>
        <item>Banani</item>
        <item>Bangshal</item>
        <item>Bhashantek</item>
        <item>Cantonment</item>
        <item>Chackbazar</item>
        <item>Darussalam</item>
        <item>Daskhinkhan</item>
        <item>Demra</item>
        <item>Dhanmondi</item>
        <item>Gandaria</item>
        <item>Gulshan</item>
        <item>Hazaribag</item>
        <item>Jatrabari</item>
        <item>Kafrul</item>
        <item>Kalabagan</item>
        <item>kamrangirchar</item>
        <item>Khilgaon</item>
        <item>Khilkhet</item>
        <item>Kotwali</item>
        <item>Lalbag</item>
        <item>Mirpur Model</item>
        <item>Mohammadpur</item>
        <item>Motijheel</item>
        <item>Mugda</item>
        <item>New Market</item>
        <item>Pallabi</item>
        <item>Paltan</item>
        <item>Ramna</item>
        <item>Rampura</item>
        <item>Rupnagar</item>
        <item>Shah Ali</item>
        <item>Shahbag</item>
        <item>Shahjahanpur</item>
        <item>Sherebanglanagar</item>
        <item>Shyampur</item>
        <item>Sutrapur</item>
        <item>Tejganon</item>
        <item>Tejganon I/A</item>
        <item>Turag</item>
        <item>Uttara</item>
        <item>Uttara West</item>
        <item>Uttarkhan</item>
        <item>Vatara</item>
        <item>Wari</item>
    </string-array>

    <!--    2 faridpur-->
    <string-array name="sub_dis_for_faridpur">
        <item>থানা নির্বাচন করুন</item>
        <item>Faridpur Sadar</item>
        <item>Boalmari</item>
        <item>Sadarpur</item>
        <item>Nagarkanda</item>
        <item>Bhanga</item>
        <item>Charbhadrasan</item>
        <item>Madhukhali</item>
        <item>Saltha</item>
    </string-array>

    <!--    2 faridpur end-->
    <!--    3 gazipur-->
    <string-array name="sub_dis_for_gazipur">
        <item>থানা নির্বাচন করুন</item>
        <item>Kaliganj</item>
        <item>Kaliakair</item>
        <item>Kapasia</item>
        <item>Gazipur Sadar</item>
        <item>Sreepur</item>
    </string-array>

    <!--    3 gazipur end-->
    <!--    dhaka division end-->

    <string-array name="sub_for_mymensingh">
        <item>জেলা নির্বাচন করুন</item>
        <item>Jamalpur</item>
        <item>Mymensingh</item>
        <item>Netrakona</item>
        <item>Sherpur</item>
    </string-array>

    <string-array name="sub_for_jamalpur">
        <item>থানা নির্বাচন করুন</item>
        <item>Jamalpur Sadar</item>
        <item>Islampur</item>
        <item>Dewangonj</item>
        <item>Melandah</item>
        <item>Sarishabari</item>
        <item>Madarganj</item>
        <item>Bokshiganj</item>
    </string-array>


    <string name="blood_group">রক্তের গ্রুপ বেছে নিন</string>
    <string name="blood_needs">নতুন অনুরোধ যোগ করুন</string>
    <string name="blood_donner">রক্তদাতা হতে পারেন</string>
    <string name="blood_type">রক্তের ধরন</string>
    <string name="blood_require">প্রোয়োজনীয় রক্তের পরিমাণ</string>
    <string name="date_and_time">তারিখ ও সময়</string>
    <string name="date_and_time1">তারিখ ও সময় লিখুন</string>
    <string name="blood_communication">যোগাযোগের নম্বর</string>
    <string name="blood_location">লোকেশন</string>
    <string name="blood_location1">আপনার অবস্থান লিখুন</string>
    <string name="blood_gift">উপহারের পরিমান(টাকা)</string>
    <string name="blood_gift1">উপহারের পরিমান লিখুন(বাধ্যতামূলক নয়)</string>
    <string name="blood_description">বর্ণনা</string>
    <string-array name="blood">
        <item>All</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="blood_type1">
        <item>Select Blood Type</item>
        <item>Blood</item>
        <item>Plasma</item>
        <item>Platelet</item>
    </string-array>

    <string-array name="blood_required">
        <item>Select Required Blood Amount</item>
        <item>1 bag</item>
        <item>2 bag</item>
        <item>3 bag</item>
        <item>4 bag</item>
        <item>5 bag</item>
        <item>6 bag</item>
        <item>7 bag</item>
        <item>8 bag</item>
        <item>9 bag</item>
        <item>10 bag</item>
    </string-array>

    <string name="question">প্রশ্ন জিজ্ঞাসা করুন</string>

    <string-array name="category">
        <item>Medicine</item>
        <item>Others</item>
        <item>Surgical</item>
        <item>Oxygen</item>
        <item>Baby Products</item>
        <item>Medical equipment</item>
    </string-array>


    <string name="new_Registration">Are you not registration go Serial page or prescription page!!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>