<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#929BD1"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tool_bar_ID"
            android:background="@color/purple_200">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                >


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="0.3"
                    android:id="@+id/profileImage"
                    android:src="@mipmap/ic_launcher">

                </de.hdodenhof.circleimageview.CircleImageView>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textSize="20sp"
                        android:layout_marginTop="8dp"
                        android:textColor="#000"
                        android:id="@+id/profileName">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Phone"
                        android:textSize="15sp"
                        android:textColor="#000"
                        android:layout_marginTop="10dp"
                        android:id="@+id/profilePhone">

                    </TextView>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3">

                    <Button
                        android:id="@+id/profileEditBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/btn_background"
                        android:drawableLeft="@drawable/ic_baseline_edit_24"
                        android:drawablePadding="2dp"
                        android:text="@string/profile_btn">

                    </Button>

                </RelativeLayout>

            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#8690CD"
                android:layout_margin="15dp"
                app:cardCornerRadius="20dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_package_title"
                        android:textColor="#000"
                        android:textSize="20sp"
                        >

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_package_details"
                        android:textColor="#000"
                        android:textSize="15sp"
                        >

                    </TextView>

                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.6"
                    >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:drawableLeft="@drawable/ic_baseline_home_24"

                        android:text="@string/profile_home"
                        >

                    </Button>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:drawableLeft="@drawable/ic_baseline_article_24"
                        android:text="@string/profile_appointment"
                        >

                    </Button>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:drawableLeft="@drawable/ic_baseline_assignment_24"
                        android:text="@string/profile_prescription"
                        >

                    </Button>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/btn_background"
                        android:layout_height="40dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:background="@drawable/btn_background"
                            android:layout_gravity="center"
                            android:src="@drawable/shop">

                        </ImageView>
                        <Button
                            android:layout_width="match_parent"
                            android:background="@drawable/btn_background"
                            android:layout_height="match_parent"
                            android:text="@string/profile_shop"
                            >

                        </Button>
                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_order"
                        >
                    </Button>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:text="@string/profile_diagnostic"
                        >

                    </Button>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_hospital"
                        >

                    </Button>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_pharmacy"
                        android:id="@+id/profilePharmacy_ID"
                        >

                    </Button>



                </LinearLayout>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.4">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginRight="-100dp"
                        android:src="@drawable/our_app">

                    </ImageView>

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</LinearLayout>