<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BloodNeedsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tool_bar_ID"
            android:background="@color/purple_200">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_border"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/blood_group"
                    android:textSize="20sp">

                </TextView>

                <Spinner
                    android:id="@+id/bloodGroupSpiner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp">

                </Spinner>

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_type"
                android:layout_marginTop="20dp"
                android:textSize="20sp">

            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_border"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"
                android:layout_height="50dp">


                <Spinner
                    android:id="@+id/bloodTypeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp">

                </Spinner>

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_require"
                android:layout_marginTop="20dp"
                android:textSize="20sp">

            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_border"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"
                android:layout_height="50dp">


                <Spinner
                    android:id="@+id/bloodRequiredSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp">

                </Spinner>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                android:layout_marginTop="10dp"
                android:textSize="20sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_border"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"
                android:weightSum="1"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:id="@+id/date_and_time"
                    android:layout_marginTop="9dp"
                    android:text="@string/date_and_time1">

                </TextView>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:id="@+id/date_and_timehBtn"
                    android:src="@drawable/ic_baseline_edit_calendar_24"
                    >

                </ImageButton>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_communication"
                android:layout_marginTop="10dp"
                android:textSize="20sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"
                android:background="@drawable/layout_border"
                android:layout_marginTop="7dp"
                android:layout_height="50dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="phone number"
                    android:inputType="number"
                    android:id="@+id/bloodPhoneNumber"
                    android:layout_marginLeft="10dp"
                    >

                </EditText>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_location"
                android:layout_marginTop="10dp"
                android:textSize="20sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"
                android:background="@drawable/layout_border"
                android:layout_marginTop="7dp"
                android:layout_height="50dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:hint="@string/blood_location1"

                    android:id="@+id/bloodLocationText_ID"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="10dp"
                    >

                </EditText>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_gift"
                android:layout_marginTop="10dp"
                android:textSize="20sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"
                android:background="@drawable/layout_border"
                android:layout_marginTop="7dp"
                android:layout_height="50dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_gift1"
                    android:id="@+id/bloodGiftEdit_ID"
                    android:inputType="number"
                    android:layout_marginLeft="10dp"
                    >

                </EditText>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_description"
                android:layout_marginTop="10dp"
                android:textSize="20sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"
                android:background="@drawable/layout_border"
                android:layout_marginTop="7dp"
                android:layout_height="50dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_description"
                    android:id="@+id/bloodDescriptionEdit_ID"
                    android:layout_marginLeft="10dp"
                    >

                </EditText>

            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="অনুরোধ করুন"
                android:layout_margin="50dp"
                android:id="@+id/bloodSubmitBtn">

            </Button>

        </LinearLayout>


    </ScrollView>


</LinearLayout>